@startuml
class screens.ForumActivity {
- Handler mainHandler
- RecyclerView recycler
- Button btnNewMessagesIndicator
- ForumAdapter adapter
- String categoryId
- User user
- TextToSpeech tts
- String currentlySpeakingMsgId
- boolean isLoadingOlder
- boolean hasMoreOlder
# void onCreate(Bundle)
- void loadMoreMessages()
- void loadMessages()
- void sendMessage()
- boolean canDelete(ForumMessage)
- boolean isLastItemVisible()
- void scrollToBottom(boolean)
- void initTTS(ForumMessage)
- void speak(ForumMessage)
- void notifyItemChangedById(String)
- List<ForumMessage> mergeMessages(List<ForumMessage>,List<ForumMessage>,boolean)
+ void onResume()
# void onPause()
# void onDestroy()
}


class screens.EmergencyContactsActivity {
# IFallDetectionService fallDetectionService
- EmergencyContactsAdapter adapter
- User user
- ActivityResultLauncher<Void> contactPickerLauncher
- boolean isFromRegistration
- FusedLocationProviderClient fusedLocationClient
# void onCreate(Bundle)
# void onPermissionsResult(Map<String,Boolean>)
- void updatePermissionUI()
- void updateFallDetectionUI()
# void onResume()
- void loadUserFromDatabase()
- void loadContacts()
- void addEmergencyContact(String,String,String)
- void retrieveContactDetails(Uri)
- String fetchPhoneNumber(String)
- void checkSmsAndLocationPermissions()
- void fetchLocationAndSendSms()
- void sendSmsToAll(String)
- void callEmergency()
}


class screens.ForumCategoriesActivity {
- ForumCategoryAdapter adapter
# void onCreate(Bundle)
# void onResume()
- void loadCategories()
- void addCategory(String,EditText)
- void showEditDialog(ForumCategory)
- void deleteCategory(ForumCategory)
}


class screens.GameHomeScreenActivity {
- Button btnFindEnemy
- TextView TVStatusOfFindingEnemy
- GameRoom currentRoom
- boolean gameStarted
- LeaderboardAdapter adapter
- User user
- TextToSpeech tts
- boolean isSpeaking
# void onCreate(Bundle)
- void toggleInstructionsSpeech()
- void updateSpeakButton(boolean)
+ void onResume()
+ void onStop()
- void loadStats()
- void displayStats()
- void setupLeaderboard()
- int getTotalWins(User)
- int getTotalGamesPlayed(User)
- void findEnemy()
- void cancelSearch()
- void listenToRoom(String)
- void updateUI(SearchState)
+ void onDestroy()
}


enum screens.SearchState {
+  IDLE
+  SEARCHING
+  GAME_FOUND
}



bases.BaseActivity <|-- screens.ForumActivity
bases.BaseActivity <|-- screens.EmergencyContactsActivity
bases.BaseActivity <|-- screens.ForumCategoriesActivity
bases.BaseActivity <|-- screens.GameHomeScreenActivity
@enduml